# DJMagic

./: settings.gradle
app/: build.gradle  info
app/libs/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/kalasoft/djmagic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Timeline
app/src/main/assets/shaders/ui/: fragmentShader.glsl  vertexShader.glsl
app/src/main/cpp/: AndroidEvents.cpp  AndroidEvents.h  AudioCodec.cpp  AudioCodec.h  AudioPlayer.cpp  AudioPlayer.h  AudioTrack.cpp  AudioTrack.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Codec.cpp  Codec.h  Commons.h  Context.cpp  Context.h  FileManager.cpp  FileManager.h  Graphics.cpp  Graphics.h  ImageView.cpp  ImageView.h  JavaCall.cpp  JavaCall.h  MediaCodec.cpp  MediaCodec.h  MediaPlayer.cpp  MediaPlayer.h  Player.cpp  Player.h  Texture.cpp  Texture.h  Time.h  VideoView.cpp  VideoView.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h  main.cpp
app/src/main/java/com/kalasoft/djmagic/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kalasoft/djmagic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
